--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     ],
     "paths": {
       "@components: ./src/components/*": ["./src/*"]
-    }
+    },
+    "types": ["vitest/globals", "node"],
+    "target": "ESNext",
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
