--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm install
 
       - name: Run Vitest tests
-        run: npm test
+        run: npm run test
 
       - name: Generate coverage report
         run: npm run coverage
