--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format:fix": "prettier --write \"./**/*.{ts,tsx,css}\"",
+    "ci:format": "prettier --check .",
     "prepare": "husky",
     "test": "vitest",
     "test:coverage": "vitest --coverage"
@@ -57,6 +58,7 @@
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
+    "validate-branch-name": "^1.3.1",
     "vitest": "^2.0.5"
   }
 }
