--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,4 @@ jobs:
         run: npm run test
 
       - name: Generate coverage report
-        run: npm run coverage
+        run: npm run test:coverage
