--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.5",
+    "next-intl": "^3.17.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2"
