chore: add settings for unused react import in components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,15 @@
       }
     ],
     "paths": {
-      "@components: ./src/components/*": ["./src/*"]
+      "@/*": ["./*"]
     },
     "types": ["vitest/globals", "node"],
     "target": "ESNext",
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+    "allowImportingTsExtensions": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
