--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "next build"
-  publish = ".next"
+  command = "next build && next export"
+  publish = "out"
 
 [[redirects]]
   from = "/*"
