--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,5 +75,10 @@ jobs:
           node-version: ${{matrix.node-version}}
       - name: Install dependencies
         run: npm install
-      - name: deploy site
-        run: curl -X POST -d {} ${{ secrets.NETLIFI_DEPLOY }}
+      - name: Install Netlify CLI
+        run: npm install -g netlify-cli
+      - name: Deploy to Netlify
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        run: netlify deploy --prod --dir=.next --site=$NETLIFY_SITE_ID
