--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.6.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^22.4.1",
