--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
 name: Continuous Integration
 
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
 on:
   pull_request:
     branches:
@@ -45,35 +49,15 @@ jobs:
       - name: Generate coverage report
         run: npm run test:coverage
 
-  build:
+  Deploy-Preview:
     runs-on: ubuntu-latest
-    needs: format
-    strategy:
-      matrix:
-        node-version: [20.x]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Node.js ${{matrix.node-version}}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{matrix.node-version}}
-      - name: Install dependencies
-        run: npm install
-      - name: Build application
-        run: npm run build
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Node.js ${{matrix.node-version}}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{matrix.node-version}}
-      - name: Install dependencies
-        run: npm install
-      - name: deploy site
-        run: curl -X POST -d {} ${{ secrets.NETLIFI_DEPLOY }}
+      - uses: actions/checkout@v2
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
