fix: reviewer dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: 'weekly'
     reviewers:
-      - 'ptchom'
+      - 'YulikK'
     commit-message:
       prefix: 'chore'
     groups:
