--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "firebase": "^10.13.0",
     "next": "14.2.5",
     "next-intl": "^3.17.3",
     "react": "^18.3.1",
