--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-intl": "^3.17.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.2",
     "react-hook-form-mui": "^7.0.1",
     "react-redux": "^9.1.2",
