--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.52.2",
     "react-hook-form-mui": "^7.0.1",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
