Feat(#14) Welcome Page (#16)
* feat: add header, implement header resizing on scroll

* feat: implement footer, add: author github, year, school logo as link

* feat: add content for welcome page

--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     ]
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@mui/material-nextjs": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.5",
     "next-intl": "^3.17.3",
