--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,9 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["src/*"]
     },
     "types": ["vitest/globals", "node"],
     "target": "ESNext",
