--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
@@ -29,6 +30,7 @@
     "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "@uiw/react-codemirror": "^4.23.0",
     "next": "14.2.5",
     "next-intl": "^3.17.3",
     "react": "^18.3.1",
