feat: add graphql request and response field

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     ]
   },
   "dependencies": {
-    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-json": "github:codemirror/lang-json",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
@@ -33,6 +33,8 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@uiw/codemirror-theme-material": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
+    "cm6-graphql": "^0.0.7",
+    "graphql": "^16.9.0",
     "next": "14.2.5",
     "next-intl": "^3.17.3",
     "react": "^18.3.1",
