--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -30,6 +31,7 @@
     "@mui/material": "^6.0.0",
     "@mui/material-nextjs": "^6.0.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@uiw/react-codemirror": "^4.23.0",
     "firebase": "^10.13.0",
     "next": "14.2.7",
     "next-intl": "^3.18.0",
