feat: add documentation

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@uiw/codemirror-theme-material": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
     "cm6-graphql": "^0.0.7",
+    "graphiql": "^3.7.1",
     "graphql": "^16.9.0",
+    "graphql-ws": "^5.16.0",
     "next": "14.2.5",
     "next-intl": "^3.17.3",
     "react": "^18.3.1",
