--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     ]
   },
   "dependencies": {
+    "@codemirror/commands": "^6.6.0",
     "@codemirror/lang-json": "github:codemirror/lang-json",
+    "@codemirror/view": "^6.33.0",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
@@ -33,6 +35,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@uiw/codemirror-theme-material": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
+    "allotment": "^1.20.2",
     "cm6-graphql": "^0.0.7",
     "graphiql": "^3.7.1",
     "graphql": "^16.9.0",
@@ -41,7 +44,8 @@
     "next-intl": "^3.17.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "thememirror": "^2.0.1"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.6.0",
