--- a/package.json
+++ b/package.json
@@ -22,26 +22,26 @@
     ]
   },
   "dependencies": {
-    "@codemirror/lang-json": "github:codemirror/lang-json",
+    "@codemirror/lang-json": "^6.0.1",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.0.1",
-    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/lab": "^6.0.0-beta.8",
     "@mui/material": "^6.0.1",
     "@mui/material-nextjs": "^6.0.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "firebase": "^10.13.1",
-    "next": "14.2.7",
-    "next-intl": "^3.19.0",
-    "@hookform/resolvers": "^3.9.0",
     "@uiw/codemirror-theme-material": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
     "allotment": "^1.20.2",
     "cm6-graphql": "^0.0.7",
+    "firebase": "^10.13.1",
     "graphiql": "^3.7.1",
     "graphql": "^16.9.0",
     "graphql-ws": "^5.16.0",
+    "next": "14.2.7",
+    "next-intl": "^3.19.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
@@ -49,8 +49,8 @@
     "react-hook-form-mui": "^7.2.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
-    "yup": "^1.4.0",
-    "thememirror": "^2.0.1"
+    "thememirror": "^2.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.7.0",
