feat: add status requests and delete button; fix PR comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,10 @@
     "consts",
     "firestore",
     "roboto",
-    "GraphiQL"
+    "GraphiQL",
+    "clsx",
+    "Estree",
+    "thememirror",
+    "codemirror"
   ]
 }
