--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphiql": "^3.7.1",
     "graphql": "^16.9.0",
     "graphql-ws": "^5.16.0",
+    "msw": "^2.4.5",
     "next": "14.2.7",
     "next-intl": "^3.19.0",
     "react": "^18.3.1",
