--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "@mui/material-nextjs": "^6.0.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/user-event": "^14.5.2",
-    "@uiw/codemirror-theme-material": "^4.23.0",
-    "@uiw/react-codemirror": "^4.23.0",
+    "@uiw/react-codemirror": "^4.23.1",
     "allotment": "^1.20.2",
     "cm6-graphql": "^0.0.7",
     "firebase": "^10.13.1",
@@ -82,5 +81,8 @@
     "typescript": "^5.5.4",
     "validate-branch-name": "^1.3.1",
     "vitest": "^2.0.5"
+  },
+  "resolutions": {
+    "@codemirror/state": "^6.4.1"
   }
 }
